--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-04-22  Peter Eisentraut  <peter_e@gmx.net>
+
+	* demo/Makefile.am: Automake 1.4e does not allow `+=' assignments
+	if the variable was not set with `=' earlier.  `+=' was not useful
+	here anyway.
+
 2001-04-22  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltdl.m4 (AC_CHECK_HEADERS): UW7 has sys/dl.h, so we must
