--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-04-23  Gary V. Vaughan  <gvv@techie.com>
+
+	* Makefile.am (EXTRA_DIST):  Distribute bootstrap.
+
 2001-04-22  Peter Eisentraut  <peter_e@gmx.net>
 
 	* bootstrap: Allow overriding the location aclocal, automake,
