--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 2001-04-23  Gary V. Vaughan  <gvv@techie.com>
 
 	From Simon Spero <ses@ibiblio.org>
+	* ltdl.m4 (AC_LTDL_DLSYM_USCORE):  Add $LIBADD_DL while
+	checking for dlsym _.
+
+	From Simon Spero <ses@ibiblio.org>
 	* libtool.m4 (lt_cv_deplibs_check_method) [darwin]: Set it!
 
 	* TODO: Make a note to undo this later.
