--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-04-23  Peter Eisentraut  <peter_e@gmx.net>
+
+	* libltdl/ltdl.c (lt_dlexit): Quit loop if only resident modules
+	are left.
+	
 2001-04-23  Gary V. Vaughan  <gvv@techie.com>
 
 	From Albert Chin-A-Young <china@thewrittenword.com>
