--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-04-23  Gary V. Vaughan  <gvv@techie.com>
+
+	* doc/PLATFORMS:  Updated with more platforms successfully
+	tested by members of libtool@gnu.org.
+
 2001-04-23  Peter Eisentraut  <peter_e@gmx.net>
 
 	* doc/PLATFORMS:  With this patch, freebsd4.3 passes the test
