--- a/TODO
+++ b/TODO
@@ -8,6 +8,17 @@ In the near future:
 multi-language-branch, so that CVS automake can remove its references
 to ltconfig.
 
+* Fix the following bugs in libltdl:
+ - error reporting of tryall_dlopen():
+   if the file actually doesn't exist (stat() fails or it wasn't dlpreopened)
+   -> report `file not found'
+   if it cannot be loaded (e.g. due to missing dependencies)
+   -> report dlerror
+    open question: which error should be reported if all dlloaders fail
+    or if a specific module type can only be loaded by one of them, how report its dlerror?
+   Also report dlerror() for dlclose and dlsym if available
+ - Make sure that the dependency_libs of a dlpreopened module won't be loaded.
+ 
 * Check whether the version of libtool.m4 is compatible with
 ltconfig/ltmain.sh.  Meanwhile, the recommended approach for
 developers using automake is to insert libtool.m4 in acinclude.m4.
