--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-04-24  Peter Eisentraut  <peter_e@gmx.net>
+
+	* libtool.m4: Support $host_os as /sysv5uw7*/ from newer
+	config.guess in addition to older /unixware*/.  Use compiler
+	driver, not linker, for linking shared libraries.
+			
 2001-04-24  Gary V. Vaughan  <gvv@techie.com>
 
 	* libtool.m4, ltmain.in, libltdl/configure.in,
