--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-04-27  Mark P Mitchell  <mark@codesourcery.com>
+
+	* ltcf-cxx.sh: Add -nostdlib to IRIX 6 archive_cmds.
+
 2001-04-24  Thomas Tanner  <tanner@ffii.org>
 
 	* TODO: describe problems with libltdl
