--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-04-27  Alexandre Oliva  <aoliva@redhat.com>
+
+	* ltcf-cxx.sh: Add -nostdlib to HP-UX GCC archive_cmds.
+
 2001-04-27  Mark P Mitchell  <mark@codesourcery.com>
 
 	* ltcf-cxx.sh: Add -nostdlib to IRIX 6 archive_cmds.
