--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-05-03  Alexandre Oliva  <aoliva@redhat.com>
+
+	* configure.in: Bumped version to 1.4.0a.
+
 2001-04-25  Gary V. Vaughan  <gvv@techie.com>
 
 	GNU libtool 1.4 was released.
