--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-05-03  Andreas Jaeger  <aj@suse.de>, Andreas Schwab  <schwab@suse.de>
+
+	* ltmain.in (relink_command): Arrange for wrapper script to save
+	output to a variable and display it only if relinking fails.
+
 2001-05-03  Alexandre Oliva  <aoliva@redhat.com>
 
 	* configure.in: Bumped version to 1.4.0a.
