--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2001-05-20  Alexandre Oliva  <aoliva@redhat.com>
+
+	* ltmain.in (exec_cmd): New variable.  Don't exec programs within
+	the big `case'; set the variable instead, and exec the cmd
+	afterwards, so that the shell gets a chance to clean up here-doc
+	files.
+	* NEWS: Update.
+
 2001-05-16  Alan Modra  <amodra@one.net.au>
 
 	* libtool.m4 (lt_cv_deplibs_check_method): pass_all for hppa*-linux.
