--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2001-05-20  Alexandre Oliva  <aoliva@redhat.com>
 
+	* ltcf-cxx.sh (allow_undefined_flag) [aix4* | aix 5*]: Fix quote
+	error.
+
 	* ltmain.in (exec_cmd): New variable.  Don't exec programs within
 	the big `case'; set the variable instead, and exec the cmd
 	afterwards, so that the shell gets a chance to clean up here-doc
