--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2001-05-20  Alexandre Oliva  <aoliva@redhat.com>
 
+	* ltconfig.in: Fix sh.test regression introduced in previous patch.
+
 	* ltconfig.in (lt_cv_sys_max_cmd_len): Improve test to work better
 	in case of non-built-in echo.  Set bounds correctly.
 
