--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-05-22  Alexandre Oliva  <aoliva@redhat.com>
+
+	* ltcf-cxx.sh (allow_undefined_flag, no_undefined_flag)
+	[aix4*|aix5*]: Prepend blank.
+
 2001-05-20  Alexandre Oliva  <aoliva@redhat.com>
 
 	* ltconfig.in: Fix sh.test regression introduced in previous patch.
