--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-05-28  Simon Patarin <simon.patarin@inria.fr>
+
+	* ltcf-cxx.sh (osf3/osf4/osf5): Support creation of C++  shared
+	libraries when using g++ with native linker.
+
 2001-05-28  Albert Chin  <china@thewrittenword.com>
 
 	* ltconfig.in (version_type, soname_spec) [aix4* | aix5*]: Use
