--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-05-28  Gary V. Vaughan  <gary@gnu.org>
+
+	* libtool.m4: Reformatting for consistency, and some refactoring
+	in preparation for ltcf-*.sh merge.
+	
 2001-05-27  Gary V. Vaughan  <gary@gnu.org>
 
 	* ltmain.in: Merged from multi-language-branch.
