--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,12 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in 1.4b: 2001-??-??; CVS version 1.4a, Libtool team:
+* Full support for C++ compiler.
+* Support for GNU gcj compiler.
+
+New in 1.4.1: 2001-??-??; CVS version 1.4.0a, Libtool team:
+* Don't leave here-doc files behind.
+
 New in 1.4: 2001-04-25; CVS version 1.3e, Libtool team:
 * Support for aix5*.
 * Bugfixes.
